<resources>
    <string name="app_name">Suitmedia Intern</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="dummy_username">John Doe</string>
</resources>