<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_suitmedia"
    tools:context=".views.firstscreen.FirstActivity">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/add_photo"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/ed_name_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_palindrome_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/ed_name_layout"
        app:layout_constraintStart_toStartOf="@id/ed_name_layout"
        app:layout_constraintEnd_toEndOf="@id/ed_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_palindrome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/palindrome"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/check"
        android:enabled="false"
        android:backgroundTint="@color/btn_colour"
        app:layout_constraintTop_toBottomOf="@id/ed_palindrome_layout"
        app:layout_constraintStart_toStartOf="@id/ed_palindrome_layout"
        app:layout_constraintEnd_toEndOf="@id/ed_palindrome_layout"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/btn_colour"
        android:text="@string/next"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/btn_check"
        app:layout_constraintStart_toStartOf="@id/btn_check"
        app:layout_constraintEnd_toEndOf="@id/btn_check"/>

</androidx.constraintlayout.widget.ConstraintLayout>